--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
 <body>
 
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="bio.html">Biography</a></li>
 </ul>
 
 <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
