--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 
 <ul>
   <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="about.html">About</a></li>
-  <li><a href="bio.html">Biography</a></li>
+  <li><a href="bio.html">About</a></li>
 </ul>
 
 <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
