hardcoded in some messages. Storage no longer linked properly :/

--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
             </button>
           </form>
           <div id="messages">
+
             <span id="message-filler"></span>
           </div>
-
+          <p>Panera Bread: 2 Michigan Ave, Chicago. Come between 9-11 pm and we will have a surplus of bread to give out.</p>
+          <p>Olive Garden: 3555 West Addison St Chicago. At 10 PM we will be giving out our leftover food.</p>
         </div>
       </div>
 
